--- a/package.json
+++ b/package.json
@@ -29,5 +29,6 @@
   "devDependencies": {
     "eslint": "7.32.0",
     "eslint-config-next": "12.0.4"
-  }
+  },
+  "proxy": "http://localhost:5000"
 }
